--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="/src/assets/images/madjam.png" />
     <link rel="stylesheet" href="/src/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>madJam</title>
+    <meta name="description" content="Listen to carefully curated playlists. Browse a wide range of playlist created specially for your delight. Available on Apple music, Spotify and Youtube music." />
+    <meta name="keywords" content="playlist, apple music, spotify, deezer, youtube, youtube music, listen, curate" />
+    <link rel="canonical" href="https://madjam.netlify.app" />
+    <title>Playlists by madJam - madJam</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
@@ -13,7 +16,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="https://unpkg.com/web-share-wrapper"></script>
     <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
